tests/baselines/reference/renamingDestructuredPropertyInFunctionType.errors.txt
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(1,15): error TS2797: Renaming a property in destructuring assignment is only allowed in a function or constructor implementation.


==== tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts (1 errors) ====
    type F = ({a: string}) => void;
                  ~~~~~~
!!! error TS2797: Renaming a property in destructuring assignment is only allowed in a function or constructor implementation.
    
    const f = ({a: string}) => string;
    